[package]
name    = "esp32c3-exercise-led-timer"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal   = { version = "0.2.7"}
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.8" }
r0             = "1.0"
riscv          = "0.10"
riscv-rt       = { version = "0.10", optional = true }
esp-backtrace  = { version = "0.4", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println    = { version = "0.3", features = ["esp32c3"] }
smart-leds     = "0.3.0"
rgb            = "0.8.34"
embedded-time  = "0.12"
fugit          = "0.3"

[dependencies.lighting_controller]
path = "../../lighting_controller"

[dependencies.esp-hal-common]
path      = "../esp-hal/esp-hal-common"
features = ["esp32c3", "smartled"]

[dependencies.esp32c3-hal]
path      = "../esp-hal/esp32c3-hal"

[features]
default = ["riscv-rt"]
